bug(spacing): mobile spacing

--- a/css/style.css
+++ b/css/style.css
@@ -20,7 +20,7 @@ footer {
  }
 
 .article-text-padding {
- margin-top: 4vw;
+ margin-top: 2vw;
 }
 
 nav {
@@ -320,6 +320,9 @@ footer {
   .article-text-padding-index {
     margin-left: 5vw;
     margin-right: 5vw;
+  }
+  .article-text-padding {
+   margin-top: 5vw;
   }
   .last-p {
     margin-bottom: 50px;
